Fix conf git to illegal-access